@@ -1,0 +1,10 @@
+// DESCRIPTION: Verilator: Verilog Test module
+//
+// This file ONLY is placed under the Creative Commons Public Domain, for
+// any use, without warranty, 2023 by Wilson Snyder.
+// SPDX-License-Identifier: CC0-1.0
+
+`verilator_config
+
+// Test that this -file rule doesn't turn off warnings in t/t_vlt_warn_file_bad.v
+lint_off -rule WIDTHTRUNC -file "t/t_vlt_warn_file_bad_b.vh"
